changed max-width from pixels to % and added pillars section(halfway done)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="max-width">
       <nav>
         <div>
           <h3>Bangladesh 2.0</h3>
@@ -23,20 +23,44 @@
     </header>
     <main>
       <section class="hero-container">
-         <div class="hero-context">
-            <div>
-                <h5 class="hero-title">Bangladesh 2.0</h5>
-            </div>
-            <div>
-                <p class="hero-description">Idea , innovation ,
-                    vision and challenges in New Bangladesh.</p>
-            </div>
-            <div><button class="btn">Explore New bangladesh</button></div>
+        <div class="hero-context">
+          <div>
+            <h5 class="hero-title">Bangladesh 2.0</h5>
+          </div>
+          <div>
+            <p class="hero-description">
+              Idea , innovation , vision and challenges in New Bangladesh.
+            </p>
+          </div>
+          <div><button class="btn">Explore New bangladesh</button></div>
         </div>
+        <img src="assets/hero.png" alt="" />
+      </section>
+      <section class="pillars-of-bangladesh">
+        <h1 class="pillars-title">Pillars of "Bangladesh 2.0"</h1>
+        <div class="pillars-card">
+          <div class="card">
+            <img src="assets/card-icon.png" alt="" class="card-img">
+            <h4 class="card-title">Innovation</h4>
+            <p class="card-description">Innovation thrives when curiosity meets courage to challenge the ordinary</p>
+          </div>
+          <div class="card">
+            <img src="assets/card-icon.png" alt="" class="card-img">
+            <h4 class="card-title">Sustainability</h4>
+            <p class="card-description">Sustainability begins with mindful choices for a greener, lasting future.</p>
+          </div>
+          <div class="card">
+            <img src="assets/card-icon.png" alt="" class="card-img">
+            <h4 class="card-title">Infrastructure</h4>
+            <p class="card-description">Strong infrastructure builds connections, resilience, and progress for all communities.</p>
+          </div>
+          <div class="card">
+            <img src="assets/card-icon.png" alt="" class="car-imgd">
+            <h4 class="card-title">Empowerment</h4>
+            <p class="card-description">Empowerment grows when knowledge and opportunity ignite individual and collective strength.</p>
+          </div>
         </div>
-            <img src="assets/hero.png"alt="" />
-    </section>
-    </div>
+      </section>
     </main>
   </body>
 </html>
