added vision section

--- a/index.html
+++ b/index.html
@@ -40,24 +40,66 @@
         <h1 class="pillars-title">Pillars of "Bangladesh 2.0"</h1>
         <div class="pillars-card">
           <div class="card">
-            <img src="assets/card-icon.png" alt="" class="card-img">
+            <img src="assets/card-icon.png" alt="" class="card-img" />
             <h4 class="card-title">Innovation</h4>
-            <p class="card-description">Innovation thrives when curiosity meets courage to challenge the ordinary</p>
+            <p class="card-description">
+              Innovation thrives when curiosity meets courage to challenge the
+              ordinary
+            </p>
           </div>
           <div class="card">
-            <img src="assets/card-icon.png" alt="" class="card-img">
+            <img src="assets/card-icon.png" alt="" class="card-img" />
             <h4 class="card-title">Sustainability</h4>
-            <p class="card-description">Sustainability begins with mindful choices for a greener, lasting future.</p>
+            <p class="card-description">
+              Sustainability begins with mindful choices for a greener, lasting
+              future.
+            </p>
           </div>
           <div class="card">
-            <img src="assets/card-icon.png" alt="" class="card-img">
+            <img src="assets/card-icon.png" alt="" class="card-img" />
             <h4 class="card-title">Infrastructure</h4>
-            <p class="card-description">Strong infrastructure builds connections, resilience, and progress for all communities.</p>
+            <p class="card-description">
+              Strong infrastructure builds connections, resilience, and progress
+              for all communities.
+            </p>
           </div>
           <div class="card">
-            <img src="assets/card-icon.png" alt="" class="car-imgd">
+            <img src="assets/card-icon.png" alt="" class="car-img" />
             <h4 class="card-title">Empowerment</h4>
-            <p class="card-description">Empowerment grows when knowledge and opportunity ignite individual and collective strength.</p>
+            <p class="card-description">
+              Empowerment grows when knowledge and opportunity ignite individual
+              and collective strength.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="vision-section">
+        <h1 class="vision-title">the Vision of Future</h1>
+        <p class="vision-description">
+          Bangladesh 2.0 aims to redefine the nation's trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure, the country is set to
+          become a global model of development.
+        </p>
+        <div class="vision-cards">
+          <div class="card card-blue">
+            <img src="assets/card-icon.png" alt="" class="card-img">
+            <h3 class="card-title">Digital transformation</h3>
+            <p class="card-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+            <button class="btn">Learn More</button>
+          </div>
+          <div class="card card-green">
+            <img src="assets/card-icon.png" alt="" class="card-img">
+            <h3 class="card-title">Green energy</h3>
+            <p class="card-description">Investments insolar and wind energy to ensure a sustainable and eco-friendly future.</p>
+            <button class="btn">Learn More</button>
+          </div>
+          <div class="card card-yellow">
+            <img src="assets/card-icon.png" alt="" class="card-img">
+            <h4 class="card-title">Modern Infrastructure</h4>
+            <p class="card-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+            <button class="btn">Learn More</button>
           </div>
         </div>
       </section>
