recent  news section done

--- a/index.html
+++ b/index.html
@@ -84,32 +84,92 @@
         </p>
         <div class="vision-cards">
           <div class="card card-blue">
-            <img src="assets/card-icon.png" alt="" class="card-img">
+            <img src="assets/card-icon.png" alt="" class="card-img" />
             <h3 class="card-title">Digital transformation</h3>
-            <p class="card-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+            <p class="card-description">
+              Creating a nationwide digital ecosystem to enhance connectivity
+              and access to services for all citizens.
+            </p>
             <button class="btn">Learn More</button>
           </div>
           <div class="card card-green">
-            <img src="assets/card-icon.png" alt="" class="card-img">
+            <img src="assets/card-icon.png" alt="" class="card-img" />
             <h3 class="card-title">Green energy</h3>
-            <p class="card-description">Investments insolar and wind energy to ensure a sustainable and eco-friendly future.</p>
+            <p class="card-description">
+              Investments insolar and wind energy to ensure a sustainable and
+              eco-friendly future.
+            </p>
             <button class="btn">Learn More</button>
           </div>
           <div class="card card-yellow">
-            <img src="assets/card-icon.png" alt="" class="card-img">
+            <img src="assets/card-icon.png" alt="" class="card-img" />
             <h4 class="card-title">Modern Infrastructure</h4>
-            <p class="card-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+            <p class="card-description">
+              Building state-of-the-art infrastructure to support economic
+              growth and global competitiveness.
+            </p>
             <button class="btn">Learn More</button>
           </div>
         </div>
       </section>
       <section class="dr-yunus">
-        <p class="quote">Once poverty is gone, we'll need to build museums to display its horrors to future generations. They'll wonder why poverty continued so long in human society—how a few people could live in luxury while billions dwelt in misery, deprivation, and despair.</p>
+        <p class="quote">
+          Once poverty is gone, we'll need to build museums to display its
+          horrors to future generations. They'll wonder why poverty continued so
+          long in human society—how a few people could live in luxury while
+          billions dwelt in misery, deprivation, and despair.
+        </p>
         <h4 class="name">Dr. Muhammad Yunus</h4>
-        <p class="position">Chief Adviser of the People's Republic of Bangladesh</p>
-        <div class="quote-bg">
+        <p class="position">
+          Chief Adviser of the People's Republic of Bangladesh
+        </p>
+        <div class="quote-bg"></div>
+      </section>
+      <section class="recent-section">
+        <h1 class="vision-title">Recent News</h1>
+        <p class="recent-texts recent-text-description">
+          Bangladesh 2.0 aims to redefine the nation's trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure, the country is set to
+          become a global model of development.
+        </p>
+        <div class="news-section">
+          <div><img class="satelite" src="assets/satelite.png" alt="" /></div>
+
+          <div class="news">
+            <h1 class="recent-title">Bangladesh Launches New Satellite</h1>
+            <img class="al-jazeera" src="assets/al-jazeera.png" alt="" />
+            <p class="recent-date">Date: 05/01/2025 Time: 10:25 PM</p>
+            <p class="recent-description vision-description">
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries—not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized
+            </p>
+            <button class="btn">Read More</button>
+          </div>
+        </div>
+        <div class="news-section recent-section-2">
+          <div><img class="satelite" src="assets/satelite.png" alt="" /></div>
+
+          <div class="news">
+            <h1 class="recent-title">Bangladesh Launches New Satellite</h1>
+            <img class="al-jazeera" src="assets/al-jazeera.png" alt="" />
+            <p class="recent-date">Date: 05/01/2025 Time: 10:25 PM</p>
+            <p class="recent-description vision-description">
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries—not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized
+            </p>
+            <button class="btn">Read More</button>
+          </div>
         </div>
       </section>
+      
     </main>
   </body>
 </html>
