--- a/index.html
+++ b/index.html
@@ -169,7 +169,47 @@
           </div>
         </div>
       </section>
-      
+      <section class="donate-section">
+        <div class="donate">
+          <h1 class="donate-today">Donate Today</h1>
+          <p class="donate-description">
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            cutting-edge technology, promoting inclusive growth, and ensuring
+            sustainability. With initiatives in renewable energy, digital
+            transformation, and robust infrastructure.
+          </p>
+        </div>
+        <div class="taka-cards">
+          <div class="card"><p>100 taka</p></div>
+          <div class="card"><p>200 taka</p></div>
+          <div class="card"><p>500 Taka</p></div>
+          <div class="card"><p>1000 Taka</p></div>
+        </div>
+        <div class="other-amount">
+          <input
+            class="amount"
+            type="number"
+            placeholder="Other Amount (Taka)"
+          />
+        </div>
+        <div class="donate-btn"><button class="btn">Done Now</button></div>
+      </section>
+      <section class="subscribe">
+        <div class="sub-title"><h1>Subscribe Newsletter</h1></div>
+        <div class="sub-description">
+          <p>
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            cutting-edge technology, promoting inclusive growth.
+          </p>
+        </div>
+        <div class="mix-up">
+          <div class="sub-input">
+            <input type="email" placeholder="Enter your email here" />
+          </div>
+          <button>Subscribe</button>
+        </div>
+        <div class="sub-footer"><p>We promise not to spam you!</p></div>
+      </section>
     </main>
   </body>
 </html>
