--- a/index.html
+++ b/index.html
@@ -206,10 +206,19 @@
           <div class="sub-input">
             <input type="email" placeholder="Enter your email here" />
           </div>
-          <button>Subscribe</button>
+          <div class="sub-btn"><button>Subscribe</button></div>
         </div>
         <div class="sub-footer"><p>We promise not to spam you!</p></div>
       </section>
     </main>
+    <footer>
+      <h1>Bangladesh 2.0</h1>
+      <div class="line-breaker"></div>
+      <div class="icons">
+        <div><a href="#"><img src="assets/facebook.png" alt="" /></a></div>
+        <div><a href="#"><img src="assets/x.png" alt="" /></a></div>
+        <div><a href="#"><img src="assets/instagram.png" alt="" /></a></div>
+      </div>
+    </footer>
   </body>
 </html>
