--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
       <h1>Bangladesh 2.0</h1>
       <div class="line-breaker"></div>
       <div class="icons">
-        <div><a href="#"><img src="assets/facebook.png" alt="" /></a></div>
-        <div><a href="#"><img src="assets/x.png" alt="" /></a></div>
-        <div><a href="#"><img src="assets/instagram.png" alt="" /></a></div>
+        <div><a href="https://www.facebook.com"><img src="assets/facebook.png" alt="" /></a></div>
+        <div><a href="https://www.instagram.com"><img src="assets/instagram.png" alt="" /></a></div>
+        <div><a href="https://www.x.com"><img src="assets/x.png" alt="" /></a></div>
       </div>
     </footer>
   </body>
