--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
         <div class="donate">
           <h1 class="donate-today">Donate Today</h1>
           <p class="donate-description">
-            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            Bangladesh 2.0 aims to redefine the nation's trajectory by embracing
             cutting-edge technology, promoting inclusive growth, and ensuring
             sustainability. With initiatives in renewable energy, digital
             transformation, and robust infrastructure.
           </p>
         </div>
         <div class="taka-cards">
-          <div class="card"><p>100 taka</p></div>
-          <div class="card"><p>200 taka</p></div>
+          <div class="card"><p>100 Taka</p></div>
+          <div class="card"><p>200 Taka</p></div>
           <div class="card"><p>500 Taka</p></div>
           <div class="card"><p>1000 Taka</p></div>
         </div>
@@ -198,7 +198,7 @@
         <div class="sub-title"><h1>Subscribe Newsletter</h1></div>
         <div class="sub-description">
           <p>
-            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            Bangladesh 2.0 aims to redefine the nation's trajectory by embracing
             cutting-edge technology, promoting inclusive growth.
           </p>
         </div>
